# agent-integrations

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE.json  SECURITY.md  docker-compose.hermes.yml  package-lock.json  package.json  pyproject.toml
.github/scripts/: write_release_notes.py
.github/workflows/: pr.yml  release.yml
docs/: NATIVE_KIT_INTEGRATION.md  agent-tool-gating.md  delete-host-file-validation.md  hermes-cli.md  hermes-governance-execute-code-and-schema-hooks.md  hermes-intentframe-integration-guide.md  hermes-intentframe-state-report.md  hermes-known-limitations.md  hermes-outbound-messaging-and-cronjob-governance.md  hermes-plugin-registration-order.md  intentframe-control-plane.md
hermes-integration/: README.md  agent.json  policy.yaml
if-integration-backend/: .gitignore  README.md  pyproject.toml
if-integration-backend/src/if_security_backend/: __init__.py  agent_config.py  cli.py
if-integration-backend/src/if_security_backend/bridge/: __init__.py  actor_pool.py  config.py  main.py  runner.py  server.py
if-integration-backend/src/if_security_backend/bundles/: __init__.py  dynamic.py
if-integration-backend/src/if_security_backend/config/: __init__.py
if-integration-backend/src/if_security_backend/config/agents/default/: agent.json  policy.yaml
if-integration-backend/src/if_security_backend/config/profiles/: core.yaml  executor.yaml
if-integration-backend/src/if_security_backend/executor_pack/: __init__.py  validate_adapter.py
if-integration-backend/src/if_security_backend/runtime/: __init__.py  bundles.py  health.py  paths.py  policy.py  supervisor.py
if-integration-backend/tests/: run_integration_tests.py  test_dynamic_bundle.py  test_validate_adapter.py
if-integration-backend/tests/integration/: bridge_connection.py  core_connection.py
if-integration-clients/: README.md
if-integration-clients/python/: README.md  pyproject.toml
if-integration-clients/python/src/if_integration_bridge/: __init__.py  client.py  errors.py
if-integration-clients/typescript/: README.md  package-lock.json  package.json
integrations/: agent-tool-gating.md
integrations/_template/: README.md  agent.json  policy.yaml
integrations/hermes/: README.md  agent.json  policy.yaml
integrations/hermes/adapter/: README.md  pyproject.toml
integrations/hermes/adapter/src/hermes_adapter/: __init__.py  bridge_session.py  main.py  mapper.py  responses.py  server.py  service.py
integrations/hermes/adapter/tests/: test_adapter.py
integrations/hermes/plugin/intentframe-gate/: README.md  __init__.py  adapter_client.py  builtin_preload.py  gate.py  governance_loader.py  plugin.yaml  pyproject.toml  registry_hook.py  schema.py  tool_definitions_hook.py
integrations/hermes/plugin/intentframe-gate/governance/: tools.yaml
integrations/hermes/plugin/intentframe-terminal/: README.md  __init__.py  gate.py  plugin.yaml  pyproject.toml  schema.py
integrations/hermes/shared/: pyproject.toml
integrations/hermes/shared/src/hermes_governance/: __init__.py  loader.py
integrations/hermes/shared/tests/: test_governance.py  test_governance_sync.py  test_governance_template.py
intentframe-control-plane/: README.md  pyproject.toml
intentframe-control-plane/src/intentframe_control_plane/: __init__.py  auth.py  cli_runner.py  config.py  lifecycle.py  main.py  read_models.py  server.py
intentframe-control-plane/src/intentframe_control_plane/static/: index.html
intentframe-control-plane/src/intentframe_control_plane/static/assets/: index-Bw5rNWG0.js  index-D2mEZ-ca.css
intentframe-control-plane/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
intentframe-control-plane/web/src/: App.tsx  index.css  main.tsx
intentframe-control-plane/web/src/api/: client.ts
intentframe-control-plane/web/src/components/: Layout.tsx  ui.tsx
intentframe-control-plane/web/src/pages/: Audit.tsx  Governance.tsx  Overview.tsx  Policy.tsx
intentframe-integrations-cli/: README.md  pyproject.toml
intentframe-integrations-cli/src/intentframe_integrations/: __init__.py  adapter_lifecycle.py  cli.py  hermes_gateway.py  hermes_governance_contract.py  hermes_governance_edit.py  hermes_install.py  hermes_integrate.py  hermes_paths.py  hermes_uninstall.py  integration_pack.py  pack_install.py  paths.py  policy_contract.py  policy_manage.py  runtime_lifecycle.py  status_report.py
scripts/: clean-project.sh  install-hermes-docker.sh  install-hermes-plugin.sh  install-hermes.sh  test-if-integration-backend-e2e.sh  test-install-hermes-docker.sh
scripts/lib/: integration-pack-ref.sh
tests/: hermes_governance_fixtures.py  hermes_tool_probes.py  intentframe_validation_helpers.py  test_intentframe_validation_helpers.py
tests/TODO/: intentframe-control-plane-redteam.md
tests/agents/: test_bridge_test_agent_sync.py
tests/docker/: .env.example  README.md  control_plane_smoke_inner.sh  docker-compose.test.yml  entrypoint.sh  headless_install_smoke_inner.sh  test_control_plane_smoke.sh  test_headless_install_smoke.sh
tests/hermes_adapter/: live_fixtures.py  test_live.py
tests/hermes_gateway/: README.md  api_client.py  cli_runner.py  governance_e2e_setup.py  isolation.py  probe_hermes_tool_schemas.py  provider_request_contract.py  test_api_client.py  test_cli_runner.py  test_gateway_e2e.py  test_gateway_toolsets_live.py  test_governed_tool_coverage.py  test_hermes_reference_contract.py  test_isolation.py  test_provider_request_contract.py  test_toolsets_contract.py  toolsets_contract.py
tests/hermes_plugin/: _loader.py  governance_fixtures.py  test_bridge_gate_live.py  test_builtin_preload.py  test_gate.py  test_integrate.py  test_registry_hook.py  test_uninstall.py
tests/install/: test_installer_bootstrap_docker.sh  test_installer_curl_docker.sh  test_ref_resolution.sh
tests/intentframe_control_plane/: __init__.py  test_lifecycle.py  test_read_models.py  test_server.py
tests/intentframe_integrations/: test_actions_manifest.py  test_adapter_lifecycle.py  test_cli_start.py  test_cli_up.py  test_governance_edit.py  (+9 more)
(+26 files in other folders)
