[project]
name = "agent-integrations"
version = "0.0.0"
description = "IntentFrame agent integrations monorepo (workspace root)"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
  "if-integration-backend",
  "if-integration-clients/python",
  "intentframe-integrations-cli",
  "integrations/hermes/adapter",
  "integrations/hermes/shared",
]
