[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentframe-control-plane"
version = "0.2.0"
description = "IntentFrame operator control plane — external admin UI for agent integrations"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.18",
  "pyyaml>=6.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intentframe_control_plane"]

[tool.hatch.build.targets.wheel.force-include]
"src/intentframe_control_plane/static" = "intentframe_control_plane/static"
