[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-governance"
version = "0.2.0"
description = "Shared governed-tool contract for Hermes IntentFrame integration"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_governance"]

[tool.hatch.build.targets.wheel.force-include]
"../governance/tools.yaml" = "hermes_governance/tools.yaml"

[tool.hatch.build.targets.sdist.force-include]
"../governance/tools.yaml" = "hermes_governance/tools.yaml"
