[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentframe-hermes-gate-plugin"
version = "0.2.1"
description = "Hermes plugin: IntentFrame validate-only gate for governed tools with required reason"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "httpx>=0.28.1",
  "pyyaml>=6.0",
]

# Hermes loads this directory as a plugin (relative imports from the plugin root).
# There is no pip-installable package layout here; dependencies are declared for tooling only.
