[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentframe-hermes-terminal-plugin"
version = "0.1.0"
description = "Hermes plugin: IntentFrame validate-only gate for terminal with required reason"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["intentframe_terminal"]

# Hermes loads the plugin directory directly; this pyproject is for pip install -e .
